--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,23 @@
         android:theme="@style/Theme.PlantasUrbanas"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
+            android:name=".StockActivity"
             android:exported="false" />
+        <activity
+            android:name=".MovimientoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NewProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
