--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,12 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_recortado"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_recortado"
         android:supportsRtl="true"
         android:theme="@style/Theme.PlantasUrbanas"
+        android:hardwareAccelerated="true"
         tools:targetApi="31">
         <activity
             android:name=".StockActivity"
@@ -19,7 +20,7 @@
             android:name=".MovimientoActivity"
             android:exported="false" />
         <activity
-            android:name=".NewProductActivity"
+            android:name=".NuevoProductoActivity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
@@ -29,6 +30,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="portrait"
+            tools:replace="screenOrientation">
         </activity>
     </application>
 
